# qp-rs

./: .gitignore  AGENT.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GAP_ANALYSIS.md  HAL_PLAN.md  Makefile  PORT_RESTRUCTURING_SUMMARY.md  README.md  RF_STACK_PLAN.md  deny.toml  qp-rs.code-workspace  renode.log.1  renode.log.2  renode.log.3  test_qs_udp.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  fusa.yml
boards/esp32c6/: Cargo.toml  README.md
boards/esp32c6/src/: main.rs
configs/: renode_config
configs/renode/: README.md
crates/comms/: Cargo.toml  README.md
crates/comms/src/: buf.rs  error.rs  events.rs  fota.rs  lib.rs  log.rs  lora.rs  mac.rs  net.rs  null_rf.rs  records.rs  rf.rs  session.rs  stack.rs  transport.rs
crates/comms/src/mac/: ble_l2cap.rs  lorawan.rs  noop.rs
crates/comms/src/phy/: loopback.rs  mod.rs
crates/comms/tests/: fota_integration.rs  rf_stack_integration.rs
crates/qf/: Cargo.toml  README.md
crates/qf/src/: active.rs  dis.rs  equeue.rs  event.rs  event_pool.rs  fusa.rs  hsm.rs  isr.rs  kernel.rs  lib.rs  pool.rs  pool_arc.rs  port.rs  priospec.rs  pubsub.rs  qmsm.rs  sync.rs  time.rs  trace.rs
crates/qf/src/hsm/: common.rs  history.rs  mod.rs  qhsm.rs  qmsm.rs  trace.rs
crates/qf/src/tests/: equeue.rs  hsm.rs  isr.rs  kernel.rs  mod.rs  pool.rs  pubsub.rs  time.rs
crates/qf/tests/: kernel_config.rs
crates/qk/: Cargo.toml  README.md
crates/qk/src/: kernel.rs  lib.rs  scheduler.rs  sync.rs  time.rs
crates/qp-rs/: Cargo.toml
crates/qp-rs/src/: lib.rs
crates/qs/: Cargo.toml  README.md
crates/qs/src/: lib.rs  predefined.rs  qutest.rs  record.rs  records.rs  rx.rs
crates/qxk/: Cargo.toml  README.md
crates/qxk/examples/: producer_consumer.rs  sync_primitives.rs
crates/qxk/src/: kernel.rs  lib.rs  primitives.rs  scheduler.rs  sync.rs  thread.rs
crates/qxk/tests/: thread_integration.rs
docs/: FUSA.md  book.toml  traceability.md
docs/src/: SUMMARY.md  cmsis.md  concepts.md  examples.md  fusa.md  getting-started.md  introduction.md  kernels.md  lxsis.md  porting.md  ports.md  qhsm.md  rvsis.md  traceability.md  tracing.md  vendoring.md
examples/: ARCHITECTURE.md  BUILDING.md  Cargo.toml  README.md  dpp.rs  lib.rs
examples/.cargo/: config.toml
examples/blinky/: Cargo.toml
examples/blinky/src/: main.rs
examples/dpp/: Cargo.toml  build.rs  diagram-esp32c6.json  diagram.json  output.txt  wokwi-esp32c6.toml  wokwi.toml
examples/dpp-esp32c6/: Cargo.toml  README.md
examples/dpp-esp32c6/.cargo/: config.toml
examples/dpp-esp32c6/src/: main.rs
examples/dpp-linux/: Cargo.toml  QS_INTEGRATION.md  README.md  UDP_QS_INTEGRATION.md
examples/dpp-linux/.cargo/: config.toml
examples/dpp-linux/src/: main.rs
examples/dpp/src/: main.rs  philo.rs  qspy.rs  table.rs
examples/dpp/tests/: qutest_dpp.rs
examples/lora_send/: Cargo.toml
examples/lora_send/src/: main.rs
hal/: Cargo.toml  README.md
hal/examples/gpio-blink/: Cargo.toml
hal/examples/gpio-blink/src/: main.rs
hal/examples/uart-echo/: Cargo.toml
hal/examples/uart-echo/src/: main.rs
hal/hal-cmsis/: Cargo.toml
hal/hal-cmsis/src/: asm.rs  basepri.rs  lib.rs  nvic.rs  scb.rs  systick.rs
hal/hal-cmsis/src/lpc17/: gpio.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-cmsis/src/nrf52/: gpio.rs  i2c.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-cmsis/src/stm32f4/: gpio.rs  i2c.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-esp/: Cargo.toml  build.rs
hal/hal-esp-idf/: Cargo.toml
hal/hal-esp-idf/src/: gpio.rs  lib.rs  spi.rs  uart.rs
hal/hal-esp/src/: gpio.rs  lib.rs  spi.rs  sx1262.rs  sx1276.rs  uart.rs
hal/hal-ht32/: Cargo.toml
hal/hal-ht32/src/: lib.rs
hal/hal-lxsis/: Cargo.toml
hal/hal-lxsis/src/: asm.rs  ccompare.rs  intenable.rs  intlevel.rs  lib.rs
hal/hal-lxsis/src/esp32/: gpio.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-lxsis/src/esp32s2/: gpio.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-lxsis/src/esp32s3/: gpio.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-lxsis/src/esp32s3/radio/: mod.rs  sx1276.rs
hal/hal-rvsis/: Cargo.toml
hal/hal-rvsis/src/: asm.rs  clint.rs  csr.rs  lib.rs  mstatus.rs  plic.rs
hal/hal-rvsis/src/esp32c3/: gpio.rs  intmtx.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-rvsis/src/esp32c6/: gpio.rs  intmtx.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-rvsis/src/esp32c6/radio/: mod.rs  sx1262.rs
hal/hal-rvsis/src/gd32vf/: gpio.rs  mod.rs  regs.rs  spi.rs  uart.rs
hal/hal-ti/: Cargo.toml
hal/hal-ti/src/: lib.rs
hal/src/: adc.rs  dac.rs  error.rs  gpio.rs  i2c.rs  integration.rs  interrupt.rs  lib.rs  lora.rs  mmio.rs  rf.rs  spi.rs  timer.rs  uart.rs
hal/src/drivers/: mod.rs
hal/src/drivers/radio/: mod.rs  sx1262.rs  sx1276.rs
ports/: README.md
ports/cortex-m/: Cargo.toml  (+1 more)
qp/core/: Cargo.toml
qp/core/src/: events.rs  lib.rs  priorities.rs  states.rs  time.rs
qp/core/src/tests/: events_test.rs  mod.rs  priorities_test.rs
qp/core/tests/: events_test.rs  priorities_test.rs
qp/mem/: Cargo.toml
qp/mem/src/: events.rs  lib.rs  pools.rs
qp/mem/src/tests/: memory_test.rs  mod.rs
qp/mem/tests/: memory_test.rs
qp/posix/: Cargo.toml
qp/posix/src/: critical.rs  time.rs
qp/qep/: Cargo.toml
qp/qep/src/: hsm.rs  lib.rs  transition.rs
qp/qep/src/tests/: hsm_test.rs  mod.rs
qp/qf/: Cargo.toml
qp/qf/src/: active.rs  lib.rs  lifecycle.rs  queue.rs  registry.rs
qp/qf/src/tests/: active_test.rs  mod.rs
qp/qf/tests/: active_test.rs
qp/qk/: Cargo.toml
qp/qk/src/: lib.rs
qp/qs/: Cargo.toml  README.md
qp/qs/src/: buffer.rs  dict.rs  lib.rs  macros.rs  nostd.rs  std.rs  std_impl.rs  types.rs
tools/: QSPY_PORT_SUMMARY.md  README.md  simulation_run.sh  trace-matrix.sh
tools/qspy/: Cargo.toml  README.md  help.txt  output.txt
tools/qspy/.claude/: settings.local.json
tools/qspy/src/: commands.rs  cursor.rs  decoder.rs  formatter.rs  frontend.rs  interpreter.rs  keyboard.rs  lib.rs  main.rs  output.rs  parser.rs  protocol.rs  runtime.rs  sizes.rs
tools/qspy/src/tests/: decoder.rs
(+184 files in other folders)
