[workspace]
members = [
    "crates/qp-rs",
    "crates/qf",
    "crates/qk",
    "crates/qxk",
    "crates/qs",
    "crates/comms",
    "examples/dpp",
    "examples/lora_send",
    "ports/posix",
    "ports/esp32-s3",
    "ports/esp32-c6",
    "ports/cortex-m",
    "ports/xtensa",
    "ports/riscv",
    "tools/qspy",
]
exclude = ["hal"]
resolver = "2"
