[package]
name = "qp-examples"
version = "0.1.0"
edition = "2021"
authors = ["QP Rust Port Team"]
license = "MIT OR Apache-2.0"
description = "Examples for the QP framework"
publish = false

# Note: All examples are standalone projects in their own directories
# This is a placeholder package for workspace organization

[lib]
path = "lib.rs"

[dependencies]
qp-core = { path = "../qp/core" }
qp-qep = { path = "../qp/qep" }
qp-qf = { path = "../qp/qf" }
qp-qv = { path = "../qp/qv" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
