[workspace]
members = [
    # "hal-esp-idf",   # ESP-IDF C SDK wrapper — requires xtensa/riscv C toolchain
    "hal-cmsis",
    "hal-lxsis",
    "hal-rvsis",
    # "examples/gpio-blink",
    # "examples/uart-echo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "hal"
version.workspace = true
edition.workspace = true
description = "Core hardware abstraction layer traits"

[dependencies]
# Optional QP integration (path points to main workspace)
qf = { path = "../crates/qf", optional = true }
qk = { path = "../crates/qk", optional = true }
embedded-hal = "1.0"
embedded-io   = "0.6"

[features]
default = []
std = ["qf?/std", "qk?/std"]
qp-integration = ["qk", "qf"]
