[package]
name = "qf"
version = "8.1.1"
edition = "2021"
authors = ["Prem Mallappa <prem.mallappa@gmail.com>"]
description = "Quantum Platform active object framework core (Rust port of QF)"
license = "MIT OR Apache-2.0"

[dependencies]
spin = { version = "0.9" }
serde = { version = "1", features = ["derive"], optional = true }
qs = { path = "../qs", optional = true }

[features]
default = ["std", "qs"]
std = []
qs = ["dep:qs"]
serde = ["dep:serde"]

[dev-dependencies]
once_cell = "1"
