[package]
name = "qf"
version = "8.1.4"
edition = "2021"
authors = ["Prem Mallappa <prem.mallappa@gmail.com>"]
description = "Quantum Platform active object framework core (Rust port of QF)"
license = "MIT OR Apache-2.0"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "portable_atomic"] }
portable-atomic = { version = "1", default-features = false }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"], optional = true }
qs = { path = "../qs", default-features = false, optional = true }
heapless = { version = "0.8", default-features = false, optional = true }

[features]
default = ["std", "qs"]
std = ["qs?/std"]
qs = ["dep:qs"]
serde = ["dep:serde"]
# Heap-free static-allocation primitives for the functional-safety build
# (see docs/FUSA.md, Phase 2). Pulls in fixed-capacity, inline-storage types.
static-alloc = ["dep:heapless"]
smp = []

[dev-dependencies]
once_cell = "1"
