[package]
name = "qk"
version = "8.1.1"
edition = "2021"
authors = ["Prem Mallappa <prem.mallappa@gmail.com>"]
description = "Preemptive kernel primitives for the Quantum Platform (Rust port of QK)"
license = "MIT OR Apache-2.0"

[dependencies]
qf = { path = "../qf", default-features = false }
qs = { path = "../qs", optional = true }
spin = "0.9"

[features]
default = ["std", "qs"]
std = ["qf/std"]
qs = ["dep:qs", "qf/qs"]
