[package]
name = "qs"
version = "8.1.4"
edition = "2021"
authors = ["Prem Mallappa <prem.mallappa@gmail.com>"]
description = "Quantum Spy (QS) tracing for Quantum Platform ports"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }
