[package]
name = "lora_send"
version = "0.1.0"
edition = "2021"
description = "LoRa send example: App → Comms → BSP → Renode SX1276/SX1262"
publish = false

[features]
default = ["host"]
host = [
    "qf/std", "qk/std",
    "dep:qs", "qf/qs", "qk/qs",
    "comms/qs",
    "dep:qf-port-posix",
]
esp32c6 = [
    "qf/std", "qk/std",
    "dep:qf-port-esp32-c6",
    "qf-port-esp32-c6/rt",
    "dep:critical-section",
    "dep:esp-idf-sys",
    "dep:hal-rvsis",
    "hal-rvsis/esp32c6",
]
smp = ["qf/smp", "qk/smp"]

[dependencies]
comms          = { path = "../../crates/comms" }
hal            = { path = "../../hal" }
hal-rvsis      = { path = "../../hal/hal-rvsis", optional = true }
qf             = { path = "../../crates/qf",  default-features = false }
qk             = { path = "../../crates/qk",  default-features = false }
qs             = { path = "../../crates/qs",  optional = true }
qf-port-posix  = { path = "../../ports/posix",    optional = true }
qf-port-esp32-c6 = { path = "../../ports/esp32-c6", optional = true }
critical-section = { version = "1",  optional = true }
esp-idf-sys    = { version = "0.34", features = ["binstart"], optional = true }

[build-dependencies]
embuild = "0.31"

[[bin]]
name = "lora_send"
path = "src/main.rs"
required-features = ["host"]

[[bin]]
name = "lora_send_c6"
path = "src/bin/esp32_c6.rs"
required-features = ["esp32c6"]
