[package]
name = "hal-cmsis"
version.workspace = true
edition.workspace = true
description = "ARM CMSIS implementation for HAL"

[dependencies]
hal            = { path = ".." }
embedded-hal   = "1.0"
embedded-io    = "0.6"

[features]
default = []
stm32f4xx = []
nrf52840 = []
lpc1768 = []
cc26xx = []
ht32f5 = []
qp-integration = ["hal/qp-integration"]
