[package]
name = "hal-esp"
version.workspace = true
edition.workspace = true
description = "ESP-IDF driver implementation for HAL"

[dependencies]
hal = { path = ".." }
esp-idf-sys = { version = "0.35", features = ["binstart"] }

[build-dependencies]
embuild = "0.32"

[features]
default = []
esp32 = []
esp32s3 = []
esp32c6 = []
qp-integration = ["hal/qp-integration"]
