[package]
name = "hal-lxsis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Xtensa LX implementation for HAL"

[dependencies]
hal            = { path = ".." }
embedded-hal   = "1.0"
embedded-io    = "0.6"

[features]
default = []
esp32 = []
esp32s2 = []
esp32s3 = []
