[package]
name = "qp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the QP framework"
keywords.workspace = true
categories.workspace = true

[features]
default = []
std = []
defmt = ["dep:defmt"]

[dependencies]
heapless = { workspace = true }
critical-section = { workspace = true }
nb = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }

[dev-dependencies]
# Add test dependencies here