[package]
name = "qp-posix"
version = "0.1.0"
edition = "2021"
authors = ["QP-RS Contributors"]
description = "QP Framework POSIX port for Linux/Unix systems"
license = "MIT OR Apache-2.0"

[dependencies]
qp-core = { path = "../core" }
qp-qep = { path = "../qep" }
qp-qf = { path = "../qf" }
qp-qv = { path = "../qv" }
ctrlc = "3.4"

[dev-dependencies]

[features]
default = []
