[package]
name = "qp-qk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Preemptive priority-based kernel for the QP framework"
keywords.workspace = true
categories.workspace = true

[features]
default = []
defmt = ["dep:defmt", "qp-core/defmt"]

[dependencies]
qp-core = { path = "../core" }
qp-qep = { path = "../qep" }
qp-qf = { path = "../qf" }
heapless = { workspace = true }
critical-section = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }
