[package]
name = "qp-qs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Software tracing infrastructure for the QP framework"
keywords.workspace = true
categories.workspace = true

[features]
default = []
std = []
defmt = ["dep:defmt"]

[dependencies]
qp-core = { path = "../core" }
heapless = { workspace = true }
critical-section = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }
