[package]
name = "qp-qs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Software tracing infrastructure for the QP framework"
keywords.workspace = true
categories.workspace = true

[features]
default = []
std = ["critical-section/std"]
defmt = ["dep:defmt"]

[dependencies]
qp-core = { path = "../core" }
heapless = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }

[dependencies.critical-section]
workspace = true
features = []
optional = false

[[example]]
name = "basic_tracing"
required-features = ["std"]
