[package]
name = "qspy"
version = "0.1.0"
edition = "2021"
authors = ["QP Rust Port Team"]
license = "MIT OR Apache-2.0"
description = "QSpy host-side software tracing utility for QP framework"
publish = false

[[bin]]
name = "qspy"
path = "src/main.rs"

[[bin]]
name = "qspy-kill"
path = "src/bin/kill.rs"

[[bin]]
name = "qspy-reset"
path = "src/bin/reset.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
